src/styles/_base.sass
// reusable colors
$darkblue: #234a61
$gold: #ddb03a


// --- Sticky footer ---
html
	height: 100%

body
  display: flex
  flex-direction: column

#app
	flex: 1 0 auto

footer
	flex-shrink: 0
	margin: auto
	font-size: 12px
	color: #8FBCD6

	a
		color: #8FBCD6

// --------------------

html, body
	background: $darkblue
	padding-top: 60px
	padding-bottom: 40px

h1
	font-weight: 300
	margin-top: 0px
	margin-bottom: 20px

code
	font-family: Inconsolata, monospace
	font-weight: 400
	font-size: 0.9em
	background-color: darken($darkblue, 5%)
	border-radius: 4px
	padding: 3px 4px
	margin: 0px 1px
	color: #c7c5bd

p
	margin-top: 0px

p, small, ul
.centered
	margin: auto

.main
	margin: auto
	position: relative
	z-index: 0

a
	color: #f7f7f7

p, ol, ul
	a
		color: #fff
		text-decoration: underline

a:hover, a:focus
	color: #fff

a:focus
	text-decoration: none

a.active
	font-weight: bold

a
	cursor: pointer

.row
	margin-left: 0px

strong
	font-weight: 300
	color: #fff

	code
		color: #fff

.well
	background-color: #30556a
	border-radius: 5px
	border: 0px

h3, h1
	line-height: 35px
	.btn-group
		display: inline-block
		float: right

div.tooltip-inner
  max-width: 350px

.close
	font-weight: 300
	color: #fff
	opacity: 0.8

	&:hover
		color: #fff
		opacity: 1.0
		background-color: transparent

